# yolor

./: README.md  pyproject.toml  setup.cfg  setup.py
yolor_mimsolutions/: __init__.py  __main__.py  detect.py  test.py  train.py  tune.py
yolor_mimsolutions/models/: export.py
yolor_mimsolutions/utils/: general.py  layers.py  loss.py
