[metadata]
name = yolor-mimsolutions
version = 0.0.1
author = Chien-Yao Wang, I-Hau Yeh, Hong-Yuan Mark Liao
author_email = marcin.wrochna@mim-solutions.ai
description = Implementation from  You Only Learn One Representation paper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WongKinYiu/yolor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pycocotools
zip_safe = False

